# safira-ssa

./: .gitignore  LICENSE  MANIFEST.in  README.md  safira.in  setup.cfg  setup.py
docs/: architecture.md
examples/: safira_sample.in
src/safira/: __init__.py  cli.py  config.py  constants.py  data.py  forecast.py  models.py  plotting.py  sai.py
src/safira/resources/: __init__.py  safira_ssa_worldbank_snapshot.xlsx  safira_ssa_worldbank_snapshot_metadata.json
tests/: test_config_and_data.py  test_sai.py
