[metadata]
name = safira-ssa
version = 0.1.0
description = SAFIRA-SSA - Skill Advancement Forecasting and Intelligence for Readiness in Africa
author = Chinedu Ekuma
author_email = cekuma1@gmail.com
maintainer = Chinedu Ekuma
url = https://github.com/gmp007/safira-ssa
license = GNU GPL version 3
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
keywords = skills, Sub-Saharan Africa, artificial intelligence, automation, forecasting, World Bank, LSTM, SAI
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Intended Audience :: Education
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Information Analysis

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
include_package_data = True
install_requires =
    joblib>=1.3
    matplotlib>=3.7
    numpy>=1.23
    openpyxl>=3.1
    pandas>=1.5
    pandas-datareader>=0.10
    pycountry>=22.3
    scikit-learn>=1.2
    seaborn>=0.12
    torch>=2.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    safira = safira.cli:main

[options.extras_require]
geo =
    geopandas>=0.13
    mapclassify>=2.6
umap =
    umap-learn>=0.5
full =
    geopandas>=0.13
    mapclassify>=2.6
    umap-learn>=0.5
dev =
    pytest>=7
    build>=1
    twine>=4

[flake8]
max-line-length = 110
